--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>title</title>
+    <title>jQuery Template</title>
   </head>
+  <script type="text/javascript" src="">
+    
+  </script>
   <body>
   
   </body>
